--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
-    "test": "jest --watchAll --verbose",
+    "test": "jest --verbose",
     "build": "tsc",
     "start": "node --trace-deprecation build/app.js "
   },
