--- a/.github/workflows/run-test-on-pull-request.yml
+++ b/.github/workflows/run-test-on-pull-request.yml
@@ -6,7 +6,7 @@ on:
       - reopened
       - synchronize
 jobs:
-  check-branches:
+  test:
     name: "Test"
     runs-on: ubuntu-latest
     steps:
