--- a/.github/workflows/run-test-on-pull-request.yml
+++ b/.github/workflows/run-test-on-pull-request.yml
@@ -1,6 +1,7 @@
 name: Run test on PR
 on:
-  pull_request_target:
+  pull_request:
+    branches: ["main"]
     types:
       - opened
       - reopened
