--- a/.github/workflows/run-test-on-pull-request.yml
+++ b/.github/workflows/run-test-on-pull-request.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - name: Install Dependencies
-        run: npm i
+        run: npm ci
       - name: Run Tests
         run: npm run test
