--- a/package.json
+++ b/package.json
@@ -1,46 +1,41 @@
 {
-  "name": "backend",
+  "name": "product-service",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC",
+  "description": "Product Catalogue Service",
+  "main": "server.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "test": "jest --verbose",
+    "dev": "nodemon server.ts",
     "build": "tsc",
-    "start": "node --trace-deprecation build/app.js "
+    "start": "node build/server.js"
+  },
+  "keywords": [
+    "nodejs",
+    "microservices"
+  ],
+  "author": "CTSE 2024",
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dayjs": "^1.11.10",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "lodash": "^4.17.21",
-    "mongodb-memory-server": "^8.15.1",
-    "mongoose": "^7.5.3",
-    "morgan": "^1.10.0",
-    "nanoid": "^3.3.4",
-    "pino": "^8.15.3",
-    "pino-pretty": "^10.2.0",
-    "zod": "^3.22.2"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/body-parser": "^1.19.3",
-    "@types/config": "^3.3.1",
-    "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.18",
-    "@types/jest": "^29.5.5",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/lodash": "^4.14.199",
-    "@types/morgan": "^1.9.6",
-    "@types/node": "^20.8.0",
-    "@types/supertest": "^2.0.13",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.3",
+    "@types/supertest": "^6.0.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-prom-bundle": "^7.0.0",
+    "joi": "^17.12.3",
+    "mongodb-memory-server": "^9.1.8",
+    "mongoose": "^8.3.0",
+    "nodemon": "^3.1.0",
+    "prom-client": "^15.1.1",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "winston": "^3.13.0",
+    "winston-loki": "^6.0.8"
   }
 }
