--- a/.github/workflows/test-and-push-to-gar.yaml
+++ b/.github/workflows/test-and-push-to-gar.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install gcloud CLI
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: "${{ secrets.GOOGLE_PROJECT }}"
+          credentials_json: ${{ secrets.GOOGLE_PROJECT }}
 
       - name: "Set up Cloud SDK"
         uses: "google-github-actions/setup-gcloud@v2"
