Revert "updated prod.Dockerfile in  yaml file"
This reverts commit 376504254e4315ca6637c8f99fa641fcc503e182.

Accidently comitted a unwanted file

--- a/.github/workflows/test-and-push-to-gar.yaml
+++ b/.github/workflows/test-and-push-to-gar.yaml
@@ -39,5 +39,5 @@ jobs:
           GOOGLE_REGION: us-central1
         run: |
           gcloud auth configure-docker $GOOGLE_REGION-docker.pkg.dev
-          docker build -f ./prod.Dockerfile -t us-central1-docker.pkg.dev/${{secrets.GCP_PROJECT_ID}}/ctse-docker-image/product-service:$GITHUB_SHA .
+          docker build -f dockerfiles/prod.Dockerfile -t us-central1-docker.pkg.dev/${{secrets.GCP_PROJECT_ID}}/ctse-docker-image/product-service:$GITHUB_SHA .
           docker push us-central1-docker.pkg.dev/conductive-bank-377916/ctse-docker-image/product-service:$GITHUB_SHA
