--- a/.github/workflows/test-and-push-to-gar.yaml
+++ b/.github/workflows/test-and-push-to-gar.yaml
@@ -35,8 +35,8 @@ jobs:
       - name: Build and push Docker image to GAR
         env:
           GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
-          GOOGLE_REGION: us-central1
+          GOOGLE_REGION: ${{ secrets.GAR_LOCATION }}
         run: |
           gcloud auth configure-docker $GOOGLE_REGION-docker.pkg.dev
-          docker build -f ./prod.Dockerfile -t us-central1-docker.pkg.dev/${{secrets.GCP_PROJECT_ID}}/ctse-docker-image/product-service:$GITHUB_SHA .
-          docker push us-central1-docker.pkg.dev/conductive-bank-377916/ctse-docker-image/product-service:$GITHUB_SHA
+          docker build -f ./prod.Dockerfile -t $GOOGLE_REGION-docker.pkg.dev/${{secrets.GCP_PROJECT_ID}}/ctse-docker-image/product-service:$GITHUB_SHA .
+          docker push $GOOGLE_REGION-docker.pkg.dev/${{secrets.GCP_PROJECT_ID}}/ctse-docker-image/product-service:$GITHUB_SHA
