--- a/.github/workflows/deploy-on-gke-prod.yaml
+++ b/.github/workflows/deploy-on-gke-prod.yaml
@@ -36,15 +36,11 @@ jobs:
       - name: "Use gcloud CLI"
         run: "gcloud info"
 
-      - id: "auth"
-        name: "Authenticate to Google Cloud"
-        uses: "google-github-actions/auth@v0"
-        with:
-          credentials_json: ${{ secrets.GOOGLE_PROJECT }}
-
       - name: Deploy to GKE
+        env:
+          GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
         run: |
           gcloud container clusters get-credentials $GKE_CLUSTER --region $GKE_ZONE
-          sed -i "s/GOOGLE_PROJECT/$GOOGLE_PROJECT/g" ./k8s/deployment.yaml
-          kubectl apply -f ./k8s/deployment.yaml
-          kubectl apply -f ./k8s/service.yaml
+          sed -i "s/GOOGLE_PROJECT/$GOOGLE_PROJECT/g" k8s/deployment.yaml
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
