--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: productservice
-          image: us-central1-docker.pkg.dev/GCP_PROJECT_ID/ctse-docker-image/product-service:latest
+          image: us-central1-docker.pkg.dev/GCP_PROJECT_ID/ctse-docker-image/product-service:IMAGE_TAG
           resources:
             limits:
               memory: "128Mi"
