--- a/.github/workflows/deploy-on-gke-prod.yaml
+++ b/.github/workflows/deploy-on-gke-prod.yaml
@@ -41,9 +41,23 @@ jobs:
       - name: Deploy to GKE
         env:
           GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+          SECRET_MONGO_URI: ${{ secrets.SECRET_MONGO_URI }}
+          SECRET_DB_NAME: ${{ secrets.SECRET_DB_NAME }}
+          SECRET_PORT: ${{ secrets.SECRET_PORT }}
+          SECRET_GRAFANA_LOKI_HOST: ${{ secrets.SECRET_GRAFANA_LOKI_HOST }}
+          SECRET_GRAFANA_LOKI_USERID: ${{ secrets.SECRET_GRAFANA_LOKI_USERID }}
+          SECRET_GRAFANA_LOKI_API_TOKEN: ${{ secrets.SECRET_GRAFANA_LOKI_API_TOKEN }}
         run: |
           gcloud container clusters get-credentials $GKE_CLUSTER --region $GKE_ZONE
           sed -i "s/GCP_PROJECT_ID/${GCP_PROJECT_ID}/g" ./k8s/deployment.yaml
           sed -i "s/IMAGE_TAG/${GITHUB_SHA}/g" ./k8s/deployment.yaml
+
+          sed -i 's/SECRET_MONGO_URI/${SECRET_MONGO_URI}/g' ./k8s/secrets.yaml
+          sed -i 's/SECRET_DB_NAME/${SECRET_DB_NAME}/g' ./k8s/secrets.yaml
+          sed -i 's/SECRET_PORT/${SECRET_PORT}/g' ./k8s/secrets.yaml
+          sed -i 's/SECRET_GRAFANA_LOKI_HOST/${SECRET_GRAFANA_LOKI_HOST}/g' ./k8s/secrets.yaml
+          sed -i 's/SECRET_GRAFANA_LOKI_USERID/${SECRET_GRAFANA_LOKI_USERID}/g' ./k8s/secrets.yaml
+          sed -i 's/SECRET_GRAFANA_LOKI_API_TOKEN/${SECRET_GRAFANA_LOKI_API_TOKEN}/g' ./k8s/secrets.yaml
+
           kubectl apply -f ./k8s/deployment.yaml
           kubectl apply -f ./k8s/service.yaml
