--- a/.github/workflows/deploy-on-gke-prod.yaml
+++ b/.github/workflows/deploy-on-gke-prod.yaml
@@ -58,6 +58,7 @@ jobs:
           sed -i 's/SECRET_GRAFANA_LOKI_HOST/${SECRET_GRAFANA_LOKI_HOST}/g' ./k8s/secrets.yaml
           sed -i 's/SECRET_GRAFANA_LOKI_USERID/${SECRET_GRAFANA_LOKI_USERID}/g' ./k8s/secrets.yaml
           sed -i 's/SECRET_GRAFANA_LOKI_API_TOKEN/${SECRET_GRAFANA_LOKI_API_TOKEN}/g' ./k8s/secrets.yaml
-
+            
+          kubectl apply -f ./k8s/secrets.yaml
           kubectl apply -f ./k8s/deployment.yaml
           kubectl apply -f ./k8s/service.yaml
