update secrets yaml file

--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -4,9 +4,9 @@ metadata:
   name: ctse-secrets
 type: Opaque
 data:
-  MONGO_URI: SECRET_MONGO_URI
-  DB_NAME: SECRET_DB_NAME
-  PORT: SECRET_PORT
-  GRAFANA_LOKI_HOST: SECRET_GRAFANA_LOKI_HOST
-  GRAFANA_LOKI_USERID: SECRET_GRAFANA_LOKI_USERID
-  GRAFANA_LOKI_API_TOKEN: SECRET_GRAFANA_LOKI_API_TOKEN
+  MONGO_URI: "SECRET_MONGO_URI"
+  DB_NAME: "SECRET_DB_NAME"
+  PORT: "SECRET_PORT"
+  GRAFANA_LOKI_HOST: "SECRET_GRAFANA_LOKI_HOST"
+  GRAFANA_LOKI_USERID: "SECRET_GRAFANA_LOKI_USERID"
+  GRAFANA_LOKI_API_TOKEN: "SECRET_GRAFANA_LOKI_API_TOKEN"
