delete secrets yaml file

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,35 +16,17 @@ spec:
           image: us-central1-docker.pkg.dev/GCP_PROJECT_ID/ctse-docker-image/product-service:IMAGE_TAG
           env:
             - name: MONGO_URI
-              valueFrom:
-                secretKeyRef:
-                  name: ctse-secrets
-                  key: MONGO_URI
+              value: SECRET_MONGO_URI
             - name: DB_NAME
-              valueFrom:
-                secretKeyRef:
-                  name: ctse-secrets
-                  key: DB_NAME
+              value: SECRET_DB_NAME
             - name: PORT
-              valueFrom:
-                secretKeyRef:
-                  name: ctse-secrets
-                  key: PORT
+              value: SECRET_PORT
             - name: GRAFANA_LOKI_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: ctse-secrets
-                  key: GRAFANA_LOKI_HOST
+              value: SECRET_GRAFANA_LOKI_HOST
             - name: GRAFANA_LOKI_USERID
-              valueFrom:
-                secretKeyRef:
-                  name: ctse-secrets
-                  key: GRAFANA_LOKI_USERID
+              value: SECRET_GRAFANA_LOKI_USERID
             - name: GRAFANA_LOKI_API_TOKEN
-              valueFrom:
-                secretKeyRef:
-                  name: ctse-secrets
-                  key: GRAFANA_LOKI_API_TOKEN
+              value: SECRET_GRAFANA_LOKI_API_TOKEN
           resources:
             limits:
               memory: "128Mi"
