--- a/.github/workflows/deploy-on-gke-prod.yaml
+++ b/.github/workflows/deploy-on-gke-prod.yaml
@@ -8,9 +8,8 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GOOGLE_PROJECT }}
-  GAR_LOCATION: ${{ secrets.GAR_LOCATION }}
   GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}
-  GKE_ZONE: ${{ secrets.GKE_ZONE }}
+  GKE_REGION: ${{ secrets.GKE_REGION }}
 
 jobs:
   Deploy-to-GKE:
@@ -48,16 +47,14 @@ jobs:
           SECRET_GRAFANA_LOKI_USERID: ${{ secrets.SECRET_GRAFANA_LOKI_USERID }}
           SECRET_GRAFANA_LOKI_API_TOKEN: ${{ secrets.SECRET_GRAFANA_LOKI_API_TOKEN }}
         run: |
-          gcloud container clusters get-credentials $GKE_CLUSTER --region $GKE_ZONE
+          gcloud container clusters get-credentials $GKE_CLUSTER --region $GKE_REGION
           sed -i "s/GCP_PROJECT_ID/${GCP_PROJECT_ID}/g" ./k8s/deployment.yaml
           sed -i "s/IMAGE_TAG/${GITHUB_SHA}/g" ./k8s/deployment.yaml
-
           sed -i 's/SECRET_MONGO_URI/${SECRET_MONGO_URI}/g' ./k8s/deployment.yaml
           sed -i 's/SECRET_DB_NAME/${SECRET_DB_NAME}/g' ./k8s/deployment.yaml
           sed -i 's/SECRET_PORT/${SECRET_PORT}/g' ./k8s/deployment.yaml
           sed -i 's/SECRET_GRAFANA_LOKI_HOST/${SECRET_GRAFANA_LOKI_HOST}/g' ./k8s/deployment.yaml
           sed -i 's/SECRET_GRAFANA_LOKI_USERID/${SECRET_GRAFANA_LOKI_USERID}/g' ./k8s/deployment.yaml
           sed -i 's/SECRET_GRAFANA_LOKI_API_TOKEN/${SECRET_GRAFANA_LOKI_API_TOKEN}/g' ./k8s/deployment.yaml
-            
           kubectl apply -f ./k8s/deployment.yaml
           kubectl apply -f ./k8s/service.yaml
