--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: productservice
+  name: productservice-service
 spec:
-  type: LoadBalancer
   selector:
     app: productservice
   ports:
     - protocol: TCP
-      port: 5000
+      port: 80
       targetPort: 5000
+  type: LoadBalancer
