--- a/.github/workflows/deploy-on-gke-prod.yaml
+++ b/.github/workflows/deploy-on-gke-prod.yaml
@@ -47,7 +47,7 @@ jobs:
           SECRET_GRAFANA_LOKI_USERID: ${{ secrets.SECRET_GRAFANA_LOKI_USERID }}
           SECRET_GRAFANA_LOKI_API_TOKEN: ${{ secrets.SECRET_GRAFANA_LOKI_API_TOKEN }}
         run: |
-          gcloud container clusters get-credentials $GKE_CLUSTER --region $GKE_REGION
+          gcloud container clusters get-credentials $GKE_CLUSTER --region $GKE_REGION --project $GCP_PROJECT_ID
           sed -i "s/GCP_PROJECT_ID/${GCP_PROJECT_ID}/g" ./k8s/deployment.yaml
           sed -i "s/IMAGE_TAG/${GITHUB_SHA}/g" ./k8s/deployment.yaml
           sed -i 's/SECRET_MONGO_URI/${SECRET_MONGO_URI}/g' ./k8s/deployment.yaml
