--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: productservice-service
+  name: product-service
 spec:
   selector:
     app: productservice
