--- a/.github/workflows/test-and-push-to-gar.yaml
+++ b/.github/workflows/test-and-push-to-gar.yaml
@@ -5,14 +5,14 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-push-to-gar:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Use Node.js
+      - name: Run Tests
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
